# Revelation

./: .gitignore  Dockerfile  README.md  pyproject.toml
data/: gear_model_info.csv
src/revelation/: __init__.py  __main__.py  app.py  database.py  dataset.py  gallery.py  model.py  model_loader.py  predictor.py  preprocess.py  schemas.py  storage.py
src/revelation/api/: routes.py  schemas.py
src/revelation/data/: __init__.py  database.py  gear_model.py  storage.py
src/revelation/ml/: __init__.py  gallery.py  loader.py  predictor.py  preprocess.py
