[tool.poetry]
name = "revelation"
version = "0.1.0"
description = "FFXIV equipment recognition microservice by AetherSight"
authors = ["AetherSight"]
readme = "README.md"
packages = [{include = "revelation", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-multipart = "^0.0.12"
torch = {version = "==2.7.0", source = "pytorch-cu126"}
torchvision = {version = "==0.22.0", source = "pytorch-cu126"}
opencv-python = ">=4.8.0"
Pillow = ">=10.0.0"
numpy = ">=1.24.0"
tqdm = ">=4.66.0"
timm = "^1.0.22"
uvicore = {extras = ["strand"], version = "^0.3.17"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"